# twitter-scraper

./: .env.example  .gitignore  .pylintrc  LICENSE  README.md  changelog.md  create_db.py  demo.ipynb  pyproject.toml  requirements.txt  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: pylint.yml  python-app.yml
twitter_scraper/: __main__.py
twitter_scraper/src/: __init__.py  version.py
twitter_scraper/src/classes/: tweet.py  tweet_test.py
twitter_scraper/src/core/: __init__.py  params.py  params_test.py  query.py  query_test.py  scraper.py  scraper_test.py
twitter_scraper/src/helper/: preprocess.py  preprocess_test.py  proprocess_test.py
